objects/Case.object
<CustomObject>
    <fields>
        <fullName>Primary_Member__c</fullName>
        <formula>IF(Account.RecordType.Name=&quot;Dependent&quot;,HYPERLINK(&quot;/lightning/r/&quot;&amp;Account.Account__c+&quot;/view&quot;,Account.Account__r.FirstName+&quot; &quot;+Account.Account__r.LastName, &quot;_self&quot;),IF(Account.RecordType.Name=&quot;Primary Member&quot;,HYPERLINK(&quot;/lightning/r/&quot;&amp;AccountId+&quot;/view&quot;,Account.FirstName+&quot; &quot;+Account.LastName,&quot;_self&quot;),&quot;&quot;))</formula>
        <label>Primary Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Type_Expense_Sharing__c</fullName>
        <label>Procedure Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hospitalization</fullName>
                </value>
                <value>
                    <fullName>Inpatient</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Maternity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outpatient</fullName>
                </value>
                <value>
                    <fullName>PCP</fullName>
                </value>
                <value>
                    <fullName>Radiology</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procedure_Type__c</fullName>
        <label>Procedure Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer_Change_Needed__c</fullName>
        <label>Producer Change Needed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Type_Expense_Sharing__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PCP</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <inlineHelpText>Taxonomy Lookup</inlineHelpText>
        <label>Provider Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Offered__c</fullName>
        <label>Quote Offered</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_Resolution_Time_Not_Met__c</fullName>
        <label>Reason Resolution Time Not Met</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Records_Recieved__c</fullName>
        <label>Records Recieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <label>Requester</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Date__c</fullName>
        <description>Date issue was resolved</description>
        <label>Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Save__c</fullName>
        <label>Save</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Run_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Run Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Cancel_Reason__c</fullName>
        <label>Sub Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancel_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agentra Cancellation</fullName>
                </value>
                <value>
                    <fullName>Cease and Desist / Regulatory Mandates</fullName>
                </value>
                <value>
                    <fullName>Confused about Bundled Services</fullName>
                </value>
                <value>
                    <fullName>Delayed in Sharing Request Response</fullName>
                </value>
                <value>
                    <fullName>Did Not Agree to Terms</fullName>
                </value>
                <value>
                    <fullName>Did Not Receive ID Cards</fullName>
                </value>
                <value>
                    <fullName>Duplicate Account</fullName>
                </value>
                <value>
                    <fullName>Final Transaction Decline</fullName>
                </value>
                <value>
                    <fullName>Gap or Temporary Coverage</fullName>
                </value>
                <value>
                    <fullName>In Network But Refused Service</fullName>
                </value>
                <value>
                    <fullName>Legal Customer Issue</fullName>
                </value>
                <value>
                    <fullName>List bill employer group cancellation</fullName>
                </value>
                <value>
                    <fullName>Loss of Job or Income Source</fullName>
                </value>
                <value>
                    <fullName>Member Deceased</fullName>
                </value>
                <value>
                    <fullName>Misrepresentation</fullName>
                </value>
                <value>
                    <fullName>Moving Out of Service Area</fullName>
                </value>
                <value>
                    <fullName>Negative Press / Marketing / Reputation</fullName>
                </value>
                <value>
                    <fullName>No In Network Provider in Area</fullName>
                </value>
                <value>
                    <fullName>No Preferred Providers Available</fullName>
                </value>
                <value>
                    <fullName>Not Enough Methods of Payment</fullName>
                </value>
                <value>
                    <fullName>Over 65</fullName>
                </value>
                <value>
                    <fullName>Poor Customer Service</fullName>
                </value>
                <value>
                    <fullName>Pre-Existing Conditions</fullName>
                </value>
                <value>
                    <fullName>Prescription Plan Not Sufficient</fullName>
                </value>
                <value>
                    <fullName>Program Features</fullName>
                </value>
                <value>
                    <fullName>Provider Declined to Accept HealthShare</fullName>
                </value>
                <value>
                    <fullName>Provider is Balance Billing</fullName>
                </value>
                <value>
                    <fullName>Provider Not in Network</fullName>
                </value>
                <value>
                    <fullName>Refused to Answer Questions After Sale</fullName>
                </value>
                <value>
                    <fullName>Signed Without Consent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_ID_or_NPI__c</fullName>
        <label>Tax ID or NPI#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tool_Chest__c</fullName>
        <label>Tool Chest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1% off lifetime membership</fullName>
                </value>
                <value>
                    <fullName>2% off lifetime membership</fullName>
                </value>
                <value>
                    <fullName>Application Fee Waived</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>1 X Monthly Contribution Reduction</fullName>
                    <isActive>false</isActive>
                    <label>1 X Monthly Contribution Reduction</label>
                </value>
                <value>
                    <fullName>10% off every month contribution</fullName>
                    <isActive>false</isActive>
                    <label>10% off every month contribution</label>
                </value>
                <value>
                    <fullName>15% off every month contribution</fullName>
                    <isActive>false</isActive>
                    <label>15% off every month contribution</label>
                </value>
                <value>
                    <fullName>20% off next 2 month’s contribution</fullName>
                    <isActive>false</isActive>
                    <label>20% off next 2 month’s contribution</label>
                </value>
                <value>
                    <fullName>20% off next month and 10% reduction thereafter</fullName>
                    <isActive>false</isActive>
                    <label>20% off next month and 10% reduction thereafter</label>
                </value>
                <value>
                    <fullName>20% off next month’s contribution</fullName>
                    <isActive>false</isActive>
                    <label>20% off next month’s contribution</label>
                </value>
                <value>
                    <fullName>30% off next month’s contribution</fullName>
                    <isActive>false</isActive>
                    <label>30% off next month’s contribution</label>
                </value>
                <value>
                    <fullName>Retention Manager Offer</fullName>
                    <isActive>false</isActive>
                    <label>Retention Manager Offer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Fast_Forms_Auto_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field must be added to a form as a hidden checked field to enable auto-assignment rules.</description>
        <label>Formstack Auto-Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Fast_Forms_Autoresponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field must be added to a form as a hidden checked field to enable auto-response rules.</description>
        <label>Formstack Autoresponse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Origin__c</fullName>
        <label>Web Origin</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Origin</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Glassdoor</fullName>
                </value>
                <value>
                    <fullName>Google Review</fullName>
                </value>
                <value>
                    <fullName>Healthcaresharingreview.com</fullName>
                </value>
                <value>
                    <fullName>Indeed</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetPartyRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Policy Relationship</label>
        <referenceTo>vlocity_ins__AssetPartyRelationship__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>vlocity_ins__BillingAccount__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FinancialAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>vlocity_ins__FinancialAccount__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FollowUpTo__c</fullName>
        <description>If this activity is a follow up to a previous activity.</description>
        <label>Follow Up To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IndicatorImageName__c</fullName>
        <description>Formula: Calculated &quot;indicator&quot; image name based on the priority and status of this Case. Used to display an indicator image on this case when shown in the user interface.</description>
        <formula>IF(TEXT(Priority)==&apos;High&apos; &amp;&amp; TEXT(Status)!= &apos;Closed&apos;, &apos;highpriorityopen&apos;, (IF(TEXT(Priority)==&apos;High&apos; &amp;&amp; TEXT(Status)==&apos;Closed&apos;, &apos;highpriorityclose&apos;, (IF(TEXT(Priority)==&apos;Medium&apos; &amp;&amp; TEXT(Status)!= &apos;Closed&apos;, &apos;mediumpriorityopen&apos;, (IF(TEXT(Priority)==&apos;Medium&apos; &amp;&amp; TEXT(Status) == &apos;Closed&apos;, &apos;mediumpriorityclose&apos;, (IF(TEXT(Priority)==&apos;Low&apos; &amp;&amp; TEXT(Status)!=&apos;Closed&apos;, &apos;lowpriorityopen&apos;, IF(TEXT(Priority)==&apos;Low&apos; &amp;&amp; TEXT(Status) ==&apos;Closed&apos;, &apos;lowpriorityclose&apos;,&apos;&apos; ))) )))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsuranceClaimId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InteractionNotes__c</fullName>
        <label>Interaction Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED</description>
        <label>Policy</label>
        <referenceTo>vlocity_ins__Policy__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyPartyRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED</description>
        <label>Policy Relationship</label>
        <referenceTo>vlocity_ins__PolicyPartyRelationship__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriorityImageName__c</fullName>
        <description>Formula: Calculated &quot;priority&quot; image name based on the priority of this Case. Used to display a priority image on this case when shown in the user interface.</description>
        <formula>TEXT(Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__StatementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement</label>
        <referenceTo>vlocity_ins__Statement__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StatusImageName__c</fullName>
        <description>Formula: Calculated &quot;status&quot; image name based on the status of this Case. Used to display a status image on this case when shown in the user interface.</description>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VerificationTimestamp__c</fullName>
        <label>Verification Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VerifiedAgentName__c</fullName>
        <label>Verified Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Appeals_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Appeals Queue</label>
        <queue>Appeals_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Billing_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Billing Queue</label>
        <queue>Billing</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cancellation_Cases_public</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Cancellation</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Cancellation Cases</label>
    </listViews>
    <listViews>
        <fullName>Commissions_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Commissions Queue</label>
        <queue>Commissions</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compliance_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Compliance Queue</label>
        <queue>Compliance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Concierge_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Concierge Queue</label>
        <queue>Concierge</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Concierge_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Concierge</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Concierge Cases</label>
    </listViews>
    <listViews>
        <fullName>Escalation_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Case_Age__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>Case_Created_By__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Escalation</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Escalation Cases</label>
    </listViews>
    <listViews>
        <fullName>Expense_Sharing_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Expense Sharing Queue</label>
        <queue>Expense_Sharing</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Loomis_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Member_ID__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Loomis Queue</label>
        <queue>Loomis_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Member_Enrollment_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>Case_Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Member_Enrollment</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Member Enrollment Cases</label>
    </listViews>
    <listViews>
        <fullName>Member_Loyalty_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Member Loyalty Queue</label>
        <queue>Member_Loyalty</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Member_Support_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Member Support Queue</label>
        <queue>Member_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Misrep_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Case_Created_By__c</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Escalation</value>
        </filters>
        <filters>
            <field>CASES.REASON</field>
            <operation>equals</operation>
            <value>Misrepresentation</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Misrep Cases</label>
        <sharedTo>
            <group>Compliance</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Billing</fullName>
        <active>true</active>
        <businessProcess>General Inquiry</businessProcess>
        <label>Billing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cancellation</fullName>
        <active>true</active>
        <businessProcess>Cancellation</businessProcess>
        <label>Cancellation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commission</fullName>
        <active>true</active>
        <businessProcess>Commission</businessProcess>
        <label>Commission</label>
    </recordTypes>
    <recordTypes>
        <fullName>Concierge</fullName>
        <active>true</active>
        <businessProcess>Concierge</businessProcess>
        <label>Concierge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Escalation</fullName>
        <active>true</active>
        <businessProcess>Escalation</businessProcess>
        <label>Escalation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expense_Sharing</fullName>
        <active>true</active>
        <businessProcess>Expense Sharing</businessProcess>
        <label>Expense Sharing</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Inquiry</fullName>
        <active>true</active>
        <businessProcess>General Inquiry</businessProcess>
        <label>General Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loomis</fullName>
        <active>true</active>
        <businessProcess>Loomis</businessProcess>
        <label>Loomis</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member_Enrollment</fullName>
        <active>true</active>
        <businessProcess>Member Enrollment</businessProcess>
        <label>Member Enrollment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member_Support</fullName>
        <active>true</active>
        <businessProcess>Member Support</businessProcess>
        <label>Member Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Cert</fullName>
        <active>true</active>
        <businessProcess>Pre-Cert</businessProcess>
        <label>Pre-Cert</label>
    </recordTypes>
    <recordTypes>
        <fullName>Producer_Support</fullName>
        <active>true</active>
        <businessProcess>Producer Support</businessProcess>
        <label>Producer Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__MobilePhoneCase</fullName>
        <active>true</active>
        <businessProcess>vlocity_ins__Vlocity Support Process</businessProcess>
        <description>Mobile Phone Case</description>
        <label>MobilePhoneCase</label>
    </recordTypes>
</CustomObject>